# test_proj2

./: .gitignore  CMakeLists.txt  README.md
include/: find_primes.h  primality.h
src/: find_primes.cpp  primality.cpp
tests/: primality_tests.cpp
